<resources>
    <string name="app_name">SmartBooks</string>
    <string name="home">Home</string>

    <string name="logout">Logout</string>
    <string name="favourites">Favourites</string>
    <string name="shares">Share</string>
    <string name="readMode">Read mode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="http">https://</string>

    <string name="dummy">Selected Image</string>
    <string name="download" />
    <string name="bookmarked">Bookmarked</string>
    <string name="downloadBooks">Downloaded PDF</string>
    <string name="screenshot">Screenshot</string>
    <string name="search">Search</string>
    <string name="sampleText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="_20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_book">The Book</string>
    <string name="cover_image">Cover Image</string>
    <string name="ebooks">Ebooks</string>
    <string name="category">Category</string>
    <string name="by">by</string>
    <string name="authorname">authorname,</string>
    <string name="read">Read</string>
    <string name="_0">0</string>
    <string name="likes">Likes</string>
</resources>